# Kindling

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
sidecar/: requirements.txt
sidecar/kindling_trainer/: __main__.py  config.py  data_prep.py  hardware.py  trainer.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs  ollama.rs
src-tauri/src/commands/: chat.rs  conversations.rs  mod.rs  models.rs  prompts.rs  system.rs  training.rs
src/components/: ErrorBoundary.tsx  KeyboardShortcutsOverlay.tsx  OnboardingFlow.tsx
src/components/chat/: ChatView.tsx  InputBar.tsx  MessageBubble.tsx
src/components/models/: ModelBrowser.tsx
src/components/settings/: HardwareInfo.tsx  SettingsPanel.tsx  SystemPrompts.tsx
src/components/sidebar/: ConversationList.tsx  ModelSelector.tsx  Sidebar.tsx
src/components/training/: FileUpload.tsx  TrainingConfig.tsx  TrainingProgress.tsx  TrainingWizard.tsx
src/lib/: api.ts  types.ts  utils.ts
